--- a/GovFrontend/package.json
+++ b/GovFrontend/package.json
@@ -9,7 +9,7 @@
     "test": "ng test"
   },
   "engines": {
-    "node": "22.x"
+    "node": ">=22.12.0"
   },
   "prettier": {
     "printWidth": 100,
