--- a/GovFrontend/Dockerfile
+++ b/GovFrontend/Dockerfile
@@ -1,13 +1,28 @@
-# -------- Build Stage --------
-FROM node:20-alpine AS build  # <--- هنا التعديل من node:18 لـ node:20
+# Stage 1: Build the application
+# Use the specific Node.js version required by Angular
+FROM node:22.12.0-alpine AS build
+
+# Set the working directory
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install
+
+# Copy the rest of the application source code
 COPY . .
+
+# Build the application for production
 RUN npm run build
 
-# -------- Run Stage --------
-FROM nginx:alpine
+# Stage 2: Serve the application from a lightweight Nginx server
+FROM nginx:stable-alpine
+
+# Copy the built files from the build stage to the Nginx server directory
 COPY --from=build /app/dist/gov-frontend /usr/share/nginx/html
+
+# Expose port 80 to the outside world
 EXPOSE 80
+
+# Start Nginx when the container launches
 CMD ["nginx", "-g", "daemon off;"]
