--- a/GovFrontend/package.json
+++ b/GovFrontend/package.json
@@ -4,26 +4,14 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --configuration production",
-    "start": "npm run build && npx serve -s dist/gov-frontend -l $PORT",
+    "start": "npx serve -s dist/gov-frontend -l $PORT",
+    "postinstall": "npm run build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "engines": {
     "node": "22.12.0"
   },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
-  "private": true,
   "dependencies": {
     "@angular/cdk": "^20.2.0",
     "@angular/common": "^20.1.0",
@@ -45,13 +33,6 @@
     "@angular/build": "^20.1.6",
     "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^20.1.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.8.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.8.2"
   }
 }
