--- a/GovFrontend/package.json
+++ b/GovFrontend/package.json
@@ -12,6 +12,7 @@
   "engines": {
     "node": "22.12.0"
   },
+  "private": true,
   "dependencies": {
     "@angular/cdk": "^20.2.0",
     "@angular/common": "^20.1.0",
@@ -23,6 +24,8 @@
     "@angular/router": "^20.1.0",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
+    "@angular/cli": "^20.1.6",
+    "@angular/build": "^20.1.6",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "serve": "^14.2.3",
@@ -30,8 +33,6 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.6",
-    "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^20.1.0",
     "typescript": "~5.8.2"
   }
